<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SoporteActivity">

    <!-- Título -->
    <TextView
        android:id="@+id/textTituloSoporte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/soporte_c"
        android:textColor="#004D66"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"/>

    <!-- Descripción -->
    <TextView
        android:id="@+id/textDescripcionSoporte"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/descripcion_soporte"
        android:textColor="#333333"
        android:textSize="16sp"
        android:padding="16dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/textTituloSoporte"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Información de contacto -->
    <LinearLayout
        android:id="@+id/layoutContactInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="#E6F7F6"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        android:elevation="3dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:clipToOutline="true"
        app:layout_constraintTop_toBottomOf="@id/textDescripcionSoporte"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/coreo"
            android:textColor="#000000"
            android:textSize="16sp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/telefono"
            android:textColor="#000000"
            android:textSize="16sp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/horario"
            android:textColor="#000000"
            android:textSize="16sp"/>
    </LinearLayout>

    <!-- Campo de mensaje -->
    <EditText
        android:id="@+id/editMensaje"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:hint="@string/campo_ensaje"
        android:gravity="top|start"
        android:padding="12dp"
        android:backgroundTint="#3BB66D"
        android:textColor="#000000"
        android:textColorHint="#777777"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/layoutContactInfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Botón de enviar -->
    <Button
        android:id="@+id/buttonEnviarSoporte"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/enviar_mensaje"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:background="@drawable/custom_button"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/editMensaje"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Botón de volver -->
    <Button
        android:id="@+id/button_volver"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/volver"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:background="@drawable/custom_button"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/buttonEnviarSoporte"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
