<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <LinearLayout
        android:id="@+id/layoutAbout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/about_img"
            android:scaleType="fitXY"
            android:contentDescription="@string/about_image" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creada_por"
            android:textSize="23sp"
            android:textColor="#333333"
            android:padding="16dp"
            android:gravity="center" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="32dp">

            <Button
                android:id="@+id/button_sitio_web"
                android:layout_width="380dp"
                android:layout_height="60dp"
                android:text="@string/ir_al_sitio_web"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:background="@drawable/custom_button"
                android:layout_marginBottom="16dp" />

            <Button
                android:id="@+id/button_soporte"
                android:layout_width="380dp"
                android:layout_height="60dp"
                android:text="@string/obtener_soporte"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:background="@drawable/custom_button"
                android:layout_marginBottom="16dp" />

            <Button
                android:id="@+id/button_volver"
                android:layout_width="380dp"
                android:layout_height="60dp"
                android:text="@string/volver"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:background="@drawable/custom_button" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>